tutorial1/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: python-node-ingress
  annotations:
    # If the class annotation is not specified it defaults to "gce".
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: nodejs-cip-service
            port:
              number: 80
      - path: /akash
        pathType: ImplementationSpecific
        backend:
          service:
            name: python-cip-service
            port:
              number: 80
